fix overflow wrap and cursor display error

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,9 @@ body {
 .add-pp {
     display: none;
 }
+.cursor {
+    cursor: pointer;
+}
 .float-right {
     float: right;
 }
